[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prometheus = "0.12.0"
wasmer = "2.0"
wasmer-wasi = "2.0"
wasmer-compiler-llvm = "2.0.0"
wasmer-engine-universal = "2.0.0"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]

[profile.release]
opt-level = 3
lto = true
